--- a/api/.env
+++ b/api/.env
@@ -1,11 +1,11 @@
 MONGO_URI=mongodb://localhost:50000/fiverr
 PORT=4040
 
-JWT_KEY=COKGİZliKey09090@@!
+JWT_KEY=COKGİZlfdsfdsasdiKey09090@@!
 
 JWT_EXPIRES=1209600
 
 
 
-CLOUDINARY_KEY=546592915111848
-CLOUDINARY_SECRET=zwa0MCxA5qB3WxCvo7uaWiTDzE4
+CLOUDINARY_KEY=546592915111848421321
+CLOUDINARY_SECRET=zwa0MCxA5qB3WxCvo7uaWiTDzE4fds
